[package]
name = "chef-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getset = "0.1.2"
lazy_static = "1.4.0"
linked-hash-map = "0.5.4"
# pest_consume = "1.1.1"
pest_derive = "2.1.0"
rand = "0.8.4"

[dependencies.pest]
version = "2.1.3"
features = [ "pretty-print", "serde_json" ]

[dependencies.clap]
version = "3.0.0-beta"
features = [ "derive" ]
